wip fixing splittext, gsap and vue-observe-visibility text with charming

--- a/assets/scss/modules/_about.scss
+++ b/assets/scss/modules/_about.scss
@@ -109,6 +109,10 @@ $about-h2-font-size-max: 5.45rem;
       font-size: 1rem;
       line-height: 1.6;
       margin-bottom: 1rem;
+
+      [class^="char"] {
+        display: inline;
+      }
     }
 
     @include media(">=tablet") {
